refactor profile support, support GeoJSON profiles