@@ -148,28 +148,16 @@ public class JsonFgWriterLinks implements GeoJsonWriter {
         .keySet()
         .forEach(
             collectionId ->
-                transformationContext
-                    .getApiData()
-                    .getExtension(JsonFgConfiguration.class, collectionId)
-                    .ifPresentOrElse(
-                        cfg -> {
-                          boolean enabled =
-                              cfg.isEnabled()
-                                  && !Objects.requireNonNullElse(cfg.getLinks(), ImmutableList.of())
-                                      .isEmpty()
-                                  && (cfg.getIncludeInGeoJson()
-                                      .contains(JsonFgConfiguration.OPTION.links));
-                          /* FIXME
-                                     || transformationContext
-                                         .getMediaType()
-                                         .equals(FeaturesFormatJsonFg.MEDIA_TYPE)
-                                     || transformationContext
-                                         .getMediaType()
-                                         .equals(FeaturesFormatJsonFgCompatibility.MEDIA_TYPE));
-                          */
-                          builder.put(collectionId, enabled ? cfg.getLinks() : ImmutableList.of());
-                        },
-                        () -> builder.put(collectionId, ImmutableList.of())));
+                builder.put(
+                    collectionId,
+                    writeJsonFgExtensions(transformationContext)
+                        ? transformationContext
+                            .getApiData()
+                            .getExtension(JsonFgConfiguration.class, collectionId)
+                            .map(JsonFgConfiguration::getLinks)
+                            .orElse(List.of())
+                        : List.of()));
+
     return builder.build();
   }
 }
